# dcc

./: .gitignore  404.html  ATTNC89.COM  ATTNC89.MAC  DCCRTL.MAC  E.C  E.PAS  NQ1D.PAS  README.md  TTT.PAS  assert.h  baseline_test_dcc.txt  baseline_test_dccu.txt  bsearch.c  c-runtime-optimisations-bug-fixes.md  cint.c  cpmenumd.c  crc.c  ctype.h  dcc-c89-reference-guide.md  dcc.c  dccpeep  dccpeep.c  dccrtlstrip.c  dirent.h  errno.h  fact.c  fcntl.h  fileops.c  fint.c  float.h  getsource.sh  index.html  limits.h  locale.h  lzpack.c  m.bat  m.sh  ma.bat  ma.sh  (+113 more)
00-agent-skills/: index.html
00-setup-toolchain/: index.html
01-c89-conformance/: index.html
02-build-and-link/: index.html
03-types-and-conventions/: index.html
04-operators/: index.html
10-system-and-cpm/: index.html
11-limitations/: index.html
12-examples/: index.html
archive/: asme.mac  asmsieve.mac  dcc-c89-reference-guide.md  dccrtlstrip-inclusion-table.md  lzpack.c  lzpack_54ktpa.c  mlz.bat
docs/: dcc-c89-reference-guide.md  dccrtlstrip-inclusion-table.md  runtime-memory-optimisations.md
scripts/: README.md  build-dcc.ps1  convert-baseline.ps1  dccrtl_size_report.py  ma.ps1  perfcapture.bat  perfcapture.ps1  perfcapture.sh  runall.bat  runall.ps1  runall.py  runall.sh  stacksize.bat  stacksize.sh  stress-runall.ps1  validate-unit-test.ps1
search/: search_index.json
src/: ddc.c
src/dcc/: CMakeLists.txt  README.md  build-dcc.bat  build-dcc.sh  dcc.c  dcc.h  dcc_asmname.c  dcc_assign.c  dcc_cmp.c  dcc_constexpr.c  dcc_data.c  dcc_decl.c  dcc_diag_emit.c  dcc_expr.c  dcc_fold.c  dcc_func.c  dcc_ops.c  dcc_preproc.c  dcc_state.c  dcc_stmt.c  dcc_stmt_fast.c  dcc_symbols.c  dcc_type_oracle.c  dcc_types.c  toolchain-optimisations.md
tests/: .gitattributes  (+143 more)
(+254 files in other folders)
